manifests/policies/redis-policy.yaml
# manifests/policies/redis-policy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
